
	- More documentation updates...
	- Fl_Help_View could get in an infinitely loop when
	  determining the maximum width of the page; this
	  was due to a bug in the get_length() method with
	  percentages (100% width would cause the bug.)
	- Don't need -lgdi32 for CygWin, since -mwindows
	  does this for us.
	- The WIN32 event handler did not properly handle
	  WM_SYNCPAINT messages.


CHANGES IN FLTK 1.1.0b6

	- Documentation updates...
	- The configure script now works within the CygWin
	  environment.
	- Tooltips are now enabled by default, but are not
	  re-enabled when calling the Fl_Widget::tooltip()
	  method.
	- Added new Fl::version() method to get the current
	  FLTK library version (for shared libraries/DLLs)
	- Added new Fl::event() method to get the current
	  event that is being processed.
	- Added new fl_beep() function to do audible
	  notifications of various types.
	- Added new Fl_GIF_Image, Fl_JPEG_Image, Fl_PNG_Image,
	  Fl_PNM_Image, Fl_XBM_Image, and Fl_XPM_Image classes.
	- Added new Fl_Shared_Image class, a la FLTK 2.0.
	- Added new Fl_Tiled_Image class for tiled backgrounds.
	- Added new copy(), desaturate(), inactive(), and
	  color_average() methods to the Fl_Image classes.
	- Added a horizontal scrollbar to the Fl_Help_View
	  widget.
	- Added new FL_PLASTIC_{UP/DOWN}_{BOX/FRAME} boxtypes
	  for a more "modern" look (sort of a cross between KDE
	  2.2 and Aqua.)
	- Fl_Float_Input and Fl_Int_Input no longer accept
	  pasted text that is not a floating point or integer
	  value.  Pasted numbers now replace text in these
	  widgets.
	- Implemented the Fl_File_Icon::load_png() method.
	- The Fl_File_Icon::load_system_icons() method now
	  supports KDE 2.x icons.
	- Fixed PNG support in Fl_Help_View.
	- Removed the "Microsoft" mode button from the menubar
	  demo.
	- The browser demo now makes sure that the input field
	  contains a number.
	- The Fl_Browser::make_visible() method now range checks
	  the input.